--- a/instagram-app/package.json
+++ b/instagram-app/package.json
@@ -11,13 +11,19 @@
         "@types/jquery": "^3.5.16",
         "@types/node": "^16.18.11",
         "@types/react-redux": "^7.1.25",
+        "@types/redux-persist": "^4.3.1",
+        "@types/redux-thunk": "^2.1.0",
         "axios": "^1.2.3",
         "hooks": "^0.3.2",
         "jquery": "^3.6.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.7.0",
         "react-scripts": "5.0.1",
         "redux": "^4.2.0",
+        "redux-persist": "^6.0.0",
+        "redux-thunk": "^2.4.2",
         "styled-components": "^5.3.6",
         "typescript": "^4.9.4",
         "web-vitals": "^2.1.4"
