--- a/instagram-app/package.json
+++ b/instagram-app/package.json
@@ -15,6 +15,7 @@
         "@types/redux-thunk": "^2.1.0",
         "axios": "^1.2.3",
         "hooks": "^0.3.2",
+        "http-proxy-middleware": "^2.0.6",
         "jquery": "^3.6.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -65,4 +66,5 @@
         "@types/react-dom": "^18.0.10",
         "@types/styled-components": "^5.1.26"
     }
+
 }
