--- a/instagram-app/package.json
+++ b/instagram-app/package.json
@@ -14,6 +14,7 @@
         "@types/jest": "^27.5.2",
         "@types/jquery": "^3.5.16",
         "@types/node": "^16.18.11",
+        "@types/react-cookies": "^0.1.0",
         "@types/react-redux": "^7.1.25",
         "@types/redux-persist": "^4.3.1",
         "@types/redux-thunk": "^2.1.0",
@@ -22,6 +23,7 @@
         "http-proxy-middleware": "^2.0.6",
         "jquery": "^3.6.3",
         "react": "^18.2.0",
+        "react-cookie": "^4.1.1",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.7.0",
